fix(web-components): update side nav CSS to ensure visibility of menu content is correct
Update side navigation CSS so that the visibility is handled by just the 'menu-visibility-visible'
class instead of in the media query, remove unused classes in ic-navigation-group CSS.

.#739

--- a/packages/web-components/src/components/ic-navigation-group/ic-navigation-group.css
+++ b/packages/web-components/src/components/ic-navigation-group/ic-navigation-group.css
@@ -198,11 +198,3 @@
   left: var(--navigation-group-title-position-left);
   white-space: nowrap;
 }
-
-.menu-visibility-visible {
-  visibility: visible;
-}
-
-.menu-visibility-hidden {
-  visibility: hidden;
-}
